narrower latex-beamer margin

--- a/files/vim/tex-beamer-template.tex
+++ b/files/vim/tex-beamer-template.tex
@@ -5,6 +5,7 @@
 \setbeamerfont*{frametitle}{size=\normalsize,series=\bfseries}
 \usepackage{amsthm,booktabs,amsmath,amsfonts,graphicx,lstlisting,sidecap}
 \usepackage{tikz} \tikzstyle{every picture}+=[remember picture] \everymath{\displaystyle}
+\beamersetleftmargin{3mm} \beamersetrightmargin{3mm}
 
 \hypersetup{
         pdftitle={},
