--- a/files/vim/tex-beamer-template.tex
+++ b/files/vim/tex-beamer-template.tex
@@ -23,10 +23,13 @@
 \begin{document}
 
 \section{Introduction}
-\begin{frame}	\titlepage	\end{frame}%{{{ 
-%}}}
+\begin{frame}[noframenumbering]	\titlepage	\end{frame}
+% switch Vim to insert mode and use shortcuts to insert: 
+%    F12 for new frame,               Ctrl+F12 for narrow-border frame, 
+%    Ctrl+Shift+F12 full-frame image, Shift+F12 screen-wide image
 
 
-
+\appendix
+\section{Appendix frames} % separately numbered, not shown in header
 
 \end{document}
