--- a/files/vim/tex-beamer-template.tex
+++ b/files/vim/tex-beamer-template.tex
@@ -6,7 +6,7 @@
 \usepackage{amsthm,booktabs,amsmath,amsfonts,graphicx,upgreek}
 \usepackage{tikz} \tikzstyle{every picture}+=[remember picture] \everymath{\displaystyle}
 \beamersetleftmargin{3mm} \beamersetrightmargin{3mm}
-\definecolor{myblue}{rgb}{0.10, 0.30, 0.50}
+\definecolor{myblue}{rgb}{0.000, 0.176, 0.447} % {0.000,0.447,0.808}
 \usecolortheme[named=myblue]{structure}
 
 \hypersetup{
